2006-04-14  Aaron Bockover  <aaron@abock.org>

	* rc/Banshee.Plugins/NotificationAreaIcon/NotificationAreaIconPlugin.cs:
	Hide to the tray on CTRL+W (Ruben Vermeersch, BGO #338259)

2006-04-14  Aaron Bockover  <aaron@abock.org>

	* src/PlayerInterface.cs: Correctly update the statusbar when searching by
	calling ClearModel on playlist view (Ruben Vermeersch, BGO #336006)

	* src/PlaylistView.cs: Show zeros as empty strings instead of ugly 
	zeros (Thijs Vermeir, BGO #337962)

	* docs/en/Banshee.Base/ActionManager.xml: Updated

2006-04-10  Aaron Bockover  <aaron@abock.org>

	* src/PlayerInterface.cs: Call model.RemoveTrack instead of model.Remove 
	
	* src/PlaylistModel.cs (RemoveTrack): If the removed iter is the playing
	iter, set the playing iter to zero (BGO #324768)

2006-04-09  Aaron Bockover  <aaron@abock.org>

	* src/Banshee.Dap/MassStorage/Makefile.am: Enable installation of the
	USB Generic Mass Storage DAP support; do not expect it to work without
	the proper HAL FDI updates

2006-04-09  Aaron Bockover  <aaron@abock.org>

	* configure.ac: Removed --with-gstreamer-0-10 in favor of 
	--enable-gstreamer=[0.10|0.8], the default check is now for 0.10

2006-04-09  Sebastian Dröge  <slomo@ubuntu.com>

	* configure.ac:
	* po/LINGUAS: Use a LINGUAS file instead of putting all languages 
	into configure.ac.  http://live.gnome.org/GnomeGoals/PoLinguas

2006-04-09  Aaron Bockover  <aaron@abock.org>

	* banshee.mdp: Updated MonoDevelop project

	* src/Banshee.Base/SafeUri.cs: Replacement URI class for System.Uri that
	uses GLib's g_filename_to_uri and g_filename_from_uri functions; should
	fixes lots of various URI issues

	* src/*: Anything that referenced a System.Uri has been uprooted to
	use a Banshee.Base.SafeUri

2006-04-09  Aaron Bockover  <aaron@abock.org>

	* entagged-sharp/Mpc/Util/MpcInfoReader.cs:
	* src/TrackProperties.cs: Fix 0 KB/Sec bitrate bug (#324353)

2006-04-07  Aaron Bockover  <aaron@abock.org>
