@@ -1,3 +1,7 @@
+2006-04-14  Sebastian Dröge  <slomo@ubuntu.com>
+
+	* src/MusicBrainz/Client.cs (GetID): Check for null/handle any exception
+
 2006-04-14  Aaron Bockover  <aaron@abock.org>
 
 	* rc/Banshee.Plugins/NotificationAreaIcon/NotificationAreaIconPlugin.cs:
